--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,6 +1,11 @@
+{% load static %}
 <html>
     <head>
+ 
         <title>Django Girls blog</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
         <div>
@@ -14,21 +19,8 @@
                 <p>{{ post.text|linebreaksbr }}</p>
             </div>
         {% endfor %}
-
-            <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My first post</a></h2>
-            <p>This is a Test Site , thanks for visiting </p>
-            </div>
-
-            <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My second post</a></h2>
-            <p>My first Django test site</p>
-            </div>
     </body>
 </html>
 
 
-     </body>
-</html>
+ 
